--- a/App/src/app/layout/pages/change-password/change-password.page.html
+++ b/App/src/app/layout/pages/change-password/change-password.page.html
@@ -12,7 +12,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-content [fullscreen]="true">
-    <form [formGroup]="changepasswordForm">
+    <form [formGroup]="changePasswordForm">
       <ion-item>
         <ion-grid>
           <ion-row class="ion-align-items-center ion-justify-content-center">
@@ -23,7 +23,7 @@
                 >
                 <ion-input
                   placeholder="New Password"
-                  formControlName="newpassword"
+                  formControlName="newPassword"
                 ></ion-input>
               </ion-item>
             </ion-col>
@@ -34,7 +34,7 @@
                 <ion-label position="floating" lablePlacement="stacked"
                   >Confirm Password</ion-label
                 >
-                <ion-input placeholder="Confirm Password" formControlName="confirmpassword"></ion-input>
+                <ion-input placeholder="Confirm Password" formControlName="password"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -45,7 +45,7 @@
                 shape="round"
                 class="button ion-padding"
                 color="primary"
-                
+                (click)="onSubmit()"
                 >Submit</ion-button
               >
             </ion-col>
