advertisement api added, nodata image added,etc

--- a/App/src/app/auth/login/login.page.html
+++ b/App/src/app/auth/login/login.page.html
@@ -38,13 +38,13 @@
               </ion-item>
             </ion-col>
           </ion-row>
-          <ion-row class="ion-align-items-center ion-justify-content-center">
+          <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-button
               fill="clear"
               (click)="$event.stopPropagation();navigateTo('auth/forgot-password')"
               >Forget Password?</ion-button
             >
-          </ion-row>
+          </ion-row> -->
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-button
