--- a/App/src/app/auth/onboarding/onboarding.page.html
+++ b/App/src/app/auth/onboarding/onboarding.page.html
@@ -8,7 +8,7 @@
     </swiper-slide>
     <swiper-slide>
       <img src="../../../../assets/onbording/3.png" alt="" />
-      <ion-button class="bottom-right" routerLink="/auth/login"> SKIP</ion-button>
+      <ion-button  class="bottom-right skip-btn" routerLink="/auth/login"> SKIP</ion-button>
     </swiper-slide>
   </swiper-container>
 </ion-content>
