--- a/App/src/app/auth/profile/profile.page.html
+++ b/App/src/app/auth/profile/profile.page.html
@@ -7,13 +7,9 @@
 
 <ion-content [fullscreen]="true">
   <ion-card>
-    <ion-card-header>
-      <ion-card-title></ion-card-title>
-    </ion-card-header>
-
     <ion-card-content>
-      <ion-item lines="none">
-       <img src="../../../../assets/icon/73-730477_first-name-profile-image-placeholder-png.png" alt="">
+      <ion-item  lines="none">
+       <img class="ion-text-center" src="../../../../assets/icon/73-730477_first-name-profile-image-placeholder-png.png" alt="">
       </ion-item>
       <ion-item lines="none"><ion-label>Full Name </ion-label> </ion-item>
       <ion-item lines="none">
