--- a/App/src/app/layout/pages/admin/history/history/history.page.html
+++ b/App/src/app/layout/pages/admin/history/history/history.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-back-button slot="start" defaultHref="/layout/blood-requests">
-
-    </ion-back-button>
+    <ion-back-button slot="start" defaultHref=""  (click)="goBack()"></ion-back-button>
     <ion-title>History</ion-title>
   </ion-toolbar>
 </ion-header>
