--- a/App/src/app/auth/onboarding/onboarding.page.scss
+++ b/App/src/app/auth/onboarding/onboarding.page.scss
@@ -7,9 +7,15 @@
         position: absolute;
         bottom: 8px;
         right: 16px;
+        font-weight: 700;
       }
+    
 }
+ion-button{
+    --background : white;
+    --color : var(--ion-color-primary);
 
+}
 
 
 
