--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -171,6 +171,7 @@
                 [hasConfirmButton]="true"
                 [hasInfiniteScroll]="true"
                 (onChange)="setCity($event)"
+                disabled="disabledCity"
               >
                 <ng-template ionicSelectableHeaderTemplate>
                   <ion-toolbar class="bg-color-2">
@@ -198,27 +199,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
-          <ion-col size="12">
-            <ion-item fill="outline">
-              <ion-select
-                aria-label="Fruit"
-                interface="action-sheet"
-                placeholder="Select Blood Group"
-                formControlName="bloodGroup"
-              >
-                <ion-select-option value="A_POSITIVE">A+</ion-select-option>
-                <ion-select-option value="A_NEGATIVE">A-</ion-select-option>
-                <ion-select-option value="B_POSITIVE">B+</ion-select-option>
-                <ion-select-option value="B_NEGATIVE">B-</ion-select-option>
-                <ion-select-option value="AB_POSITIVE">AB+</ion-select-option>
-                <ion-select-option value="AB_NEGATIVE">AB+</ion-select-option>
-                <ion-select-option value="O_POSITIVE">O+</ion-select-option>
-                <ion-select-option value="O_NEGATIVE">O-</ion-select-option>
-              </ion-select>
-            </ion-item>
-          </ion-col>
-        </ion-row> -->
+  
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
             <ion-item fill="outline">
