--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -22,15 +22,19 @@
           </ion-segment-button>
           <!-- Define Role Below -->
           <ion-segment-button value="history">
-            <ion-label *ngIf="user.role != 'ADMIN'" class="ion-text-capitalize">History</ion-label>
-            <ion-label *ngIf="user.role == 'ADMIN'" class="ion-text-capitalize">History Admin</ion-label>
+            <ion-label *ngIf="user.role != 'ADMIN'" class="ion-text-capitalize"
+              >History</ion-label
+            >
+            <ion-label *ngIf="user.role == 'ADMIN'" class="ion-text-capitalize"
+              >History Admin</ion-label
+            >
           </ion-segment-button>
         </ion-segment>
       </ion-item>
       <div [ngSwitch]="activeSegment">
         <!-- Define Role -->
         <div *ngSwitchCase="'list'">
-          <ng-container *ngIf="myListTabDetails.length > 0">
+          <ng-container *ngIf="myListTabDetails.length > 0;else noDataList">
             <ion-card
               *ngFor="let i of myListTabDetails"
               (click)="openModel('list',i)"
@@ -82,9 +86,12 @@
               </ion-card-content>
             </ion-card>
           </ng-container>
+          <ng-template #noDataList>
+            <app-no-data></app-no-data>
+          </ng-template>
         </div>
         <div *ngSwitchCase="'latest'">
-          <ng-container *ngIf="latestTabDetails.length > 0">
+          <ng-container *ngIf="latestTabDetails.length > 0;else noDataLatest">
             <ion-card
               *ngFor="let l of latestTabDetails"
               (click)="openModel('latest',l)"
@@ -124,7 +131,9 @@
                         </div>
                       </div>
                     </ion-col>
-                    <ion-col  [ngClass]="{'status-pending': l?.status == 'PENDING','status-allocated' : l?.status == 'ALLOCATED','status-received': l.status== 'RECEIVED','status-done' : l?.status == 'DONE','status-accepted' : l.status == 'ACCEPTED' ,'statusdoclose': l.status=='CLOSE'}">
+                    <ion-col
+                      [ngClass]="{'status-pending': l?.status == 'PENDING','status-allocated' : l?.status == 'ALLOCATED','status-received': l.status== 'RECEIVED','status-done' : l?.status == 'DONE','status-accepted' : l.status == 'ACCEPTED' ,'statusdoclose': l.status=='CLOSE'}"
+                    >
                       <ion-label class="status">{{l?.status}}</ion-label>
                     </ion-col>
                   </ion-row>
@@ -144,21 +153,25 @@
                       </ion-button>
                     </ion-col>
                     <ion-col
-                    class="ion-text-end"
-                    *ngIf="user.role == 'ADMIN' &&  l.status == 'ACCEPTED'"
-                  >
-                  <ion-label class="name" (click)="accept(l,'ACCEPTED')">
-                    {{l.acceptor.firstName}}  {{l.acceptor.lastName}} </ion-label>
-                   
-                  </ion-col>
+                      class="ion-text-end"
+                      *ngIf="user.role == 'ADMIN' &&  l.status == 'ACCEPTED'"
+                    >
+                      <ion-label class="name" (click)="accept(l,'ACCEPTED')">
+                        {{l.acceptor.firstName}} {{l.acceptor.lastName}}
+                      </ion-label>
+                    </ion-col>
                   </ion-row>
                 </ion-grid>
               </ion-card-content>
             </ion-card>
           </ng-container>
+          <ng-template #noDataLatest>
+            <app-no-data></app-no-data>
+          </ng-template>
         </div>
         <div *ngSwitchCase="'history'">
-          <ng-container *ngIf="historyTabDetails.length > 0">
+        
+          <ng-container *ngIf="historyTabDetails.length > 0;else noDataHistory">
             <ion-card
               *ngFor="let h of historyTabDetails"
               (click)="openModel('history',h)"
@@ -204,6 +217,10 @@
               </ion-card-content>
             </ion-card>
           </ng-container>
+          <ng-template #noDataHistory>
+
+            <app-no-data></app-no-data>
+          </ng-template>
         </div>
       </div>
     </div>
