--- a/App/src/app/shared/models/donation-history/donation-history.component.html
+++ b/App/src/app/shared/models/donation-history/donation-history.component.html
@@ -180,12 +180,6 @@
                   <ion-label class="head">Hemoglobin</ion-label>
                   <ion-label> : {{data?.hemoglobin}}</ion-label>
                 </ion-col>
-
-                <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
-                  <ion-label> : {{data?.illness}}</ion-label>
-                </ion-col>
-
                 <ion-col size="12">
                   <ion-label class="head">Mobile No</ion-label>
                   <ion-label> : {{data?.mobileNo}}</ion-label>
@@ -199,6 +193,17 @@
                 <ion-col size="12">
                   <ion-label class="head">Location</ion-label>
                   <ion-label> : {{data?.location}}</ion-label>
+                </ion-col>
+                <ion-col size="12">
+                  <ion-icon
+                    *ngIf="data?.donor?.illness"
+                    name="checkbox"
+                  ></ion-icon>
+                  <ion-icon
+                    *ngIf="!data?.donor?.illness"
+                    name="close"
+                  ></ion-icon>
+                  <ion-label class="head donor-illness">Illness</ion-label>
                 </ion-col>
 
               </ion-row>
