--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -157,7 +157,7 @@
                       *ngIf="user.role == 'ADMIN' &&  l.status == 'ACCEPTED'"
                     >
                       <ion-label class="name" (click)="accept(l,'ACCEPTED')">
-                        {{l.acceptor.firstName}} {{l.acceptor.lastName}}
+                        {{l?.acceptor?.firstName}} {{l?.acceptor?.lastName}}
                       </ion-label>
                     </ion-col>
                   </ion-row>
