--- a/App/src/app/layout/pages/request/request.page.html
+++ b/App/src/app/layout/pages/request/request.page.html
@@ -201,7 +201,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <ion-row class="ion-align-items-center ion-justify-content-center">
+        <ion-row *ngIf="isCity" class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12" class="ion-justify-content-between">
             <ion-item fill="outline">
               <ion-label position="floating" lablePlacement="stacked">
