--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -138,15 +138,9 @@
                     </ion-col>
                   </ion-row>
                   <ion-row class="ion-justify-content-center">
-                    <ion-col size="auto" class="admin" *ngIf="!!user.acceptor">
-                      <ion-label class="status"
-                        >{{user?.acceptor?.firstName}}
-                        {{user?.acceptor?.lastName}}</ion-label
-                      >
-                    </ion-col>
                     <ion-col
                       class="ion-text-end"
-                      *ngIf="user.role == 'ADMIN' &&  l.status != 'ACCEPTED'"
+                      *ngIf="user.role == 'ADMIN' &&  l.status == 'PENDING'"
                     >
                       <ion-button (click)="accept(l,'ACCEPTED')">
                         Accept
@@ -154,9 +148,9 @@
                     </ion-col>
                     <ion-col
                       class="ion-text-end"
-                      *ngIf="user.role == 'ADMIN' &&  l.status == 'ACCEPTED'"
+                      *ngIf="l.status != 'PENDING' && !!l.acceptor"
                     >
-                      <ion-label class="name" (click)="accept(l,'ACCEPTED')">
+                      <ion-label class="name">
                         {{l.acceptor.firstName}} {{l.acceptor.lastName}}
                       </ion-label>
                     </ion-col>
