changes in language

--- a/App/src/app/auth/profile/profile.page.html
+++ b/App/src/app/auth/profile/profile.page.html
@@ -8,13 +8,137 @@
 <ion-content [fullscreen]="true">
   <ion-card>
     <ion-card-content>
-      <ion-item  lines="none">
-       <img class="ion-text-center" src="../../../../assets/icon/73-730477_first-name-profile-image-placeholder-png.png" alt="">
-      </ion-item>
-      <ion-item lines="none"><ion-label>Full Name </ion-label> </ion-item>
-      <ion-item lines="none">
-        <ion-label>Mobile Number</ion-label>
-      </ion-item>
+      <form [formGroup]="registrationForm">
+        <ion-item lines="none">
+          <img
+            src="../../../../assets/icon/73-730477_first-name-profile-image-placeholder-png.png"
+            alt=""
+          />
+        </ion-item>
+        <!-- <ion-text class="change-profile" (click)="uploadFile()">
+          <img class="edit" src="../../../assets/edit.png" alt="">
+          <ion-badge color="primary">
+            {{'changeProfile' | translate}}
+          </ion-badge>
+        </ion-text> 
+         -->
+        <ion-row class="ion-justify-content-end">
+          <ion-item lines="none" (click)="uploadFile()">
+            <ion-icon name="create"></ion-icon>
+          </ion-item>
+        </ion-row>
+        <ion-item>
+          <ion-grid>
+            <ion-row class="ion-justify-content-center">
+              <ion-col size="11">
+                <ion-item class="input-class">
+                  <i class="ion-padding-horizontal fa-solid fa-circle-user"></i>
+                  <ion-input
+                    [readonly]="!isEditable"
+                    formControlName="firstName"
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+
+            <ion-row class="ion-align-items-center ion-justify-content-center">
+              <ion-col size="11">
+                <ion-item class="input-class">
+                  <i class="ion-padding-horizontal fa-solid fa-user"></i>
+                  <ion-input
+                    labelPlacement="stacked"
+                    [readonly]="!isEditable"
+                    formControlName="lastName"
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <ion-row
+              class="ion-align-items-center ion-justify-content-center"
+              *ngIf="!!user?.email"
+            >
+              <ion-col size="11">
+                <ion-item class="input-class">
+                  <i class="ion-padding-horizontal fa-solid fa-envelope"></i>
+                  <ion-input
+                    labelPlacement="stacked"
+                    [readonly]="!isEditable"
+                    formControlName="email"
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <ion-row
+              class="ion-align-items-center ion-justify-content-center"
+              *ngIf="!!user?.mobileNo"
+            >
+              <ion-col size="11">
+                <ion-item class="input-class">
+                  <i
+                    class="ion-padding-horizontal fa-solid fa-mobile-retro"
+                  ></i>
+                  <ion-input
+                    labelPlacement="stacked"
+                    [readonly]="!isEditable"
+                    formControlName="mobileNo"
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <ion-row
+              class="ion-align-items-center ion-justify-content-center"
+              *ngIf="!!user?.state"
+            >
+              <ion-col size="11">
+                <ion-item class="input-class">
+                  <ion-input
+                    label="State"
+                    labelPlacement="stacked"
+                    [readonly]="!isEditable"
+                    placeholder="state"
+                    formControlName="state"
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <ion-row
+              class="ion-align-items-center ion-justify-content-center"
+              *ngIf="!!user?.city"
+            >
+              <ion-col size="11">
+                <ion-item class="input-class">
+                  <ion-input
+                    label="City"
+                    labelPlacement="stacked"
+                    [readonly]="!isEditable"
+                    placeholder="city"
+                    formControlName="city"
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-align-items-center ion-justify-content-center">
+              <ion-col size="7">
+                <ion-button
+                  expand="block"
+                  class="button ion-justify-content-end ion-padding"
+                  color="primary"
+                  (click)="toggle()"
+                  >{{isEditable ? 'Save' : 'Edit'}}
+
+                  <!-- <img class="editForm" src="../../../assets/edit (1).png" alt=""> -->
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+      </form>
     </ion-card-content>
   </ion-card>
 </ion-content>
