--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -154,7 +154,7 @@
           </ion-col>
         </ion-row>
         
-        <ion-row  class="ion-align-items-center ion-justify-content-center">
+        <ion-row *ngIf="isCity"  class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12" class="ion-justify-content-between">
             <ion-item fill="outline">
               <ion-label position="floating" lablePlacement="stacked">
