--- a/App/src/app/layout/pages/home/home.page.scss
+++ b/App/src/app/layout/pages/home/home.page.scss
@@ -20,7 +20,7 @@ ion-card-title {
     height: auto;
   }
 }
-.slide-img{
-  height: 100%;
-  width: 100%;
-}
+// .slide-img{
+//   height: 100%;
+//   width: 100%;
+// }
