--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -119,6 +119,13 @@
                       </div>
                     </ion-col>
                   </ion-row>
+                 <ion-row class="ion-justify-content-end
+                 ">
+                  <ion-label>
+                    {{h.donationDate}}
+                  </ion-label>
+                 </ion-row>
+
                 </ion-grid>
               </ion-card-content>
             </ion-card>
