--- a/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
+++ b/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
@@ -14,7 +14,7 @@
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
         <ion-label class="ion-padding-horizontal"
-          >Personal Details</ion-label
+          >Request Details</ion-label
         >
       </ion-item>
       <div class="ion-padding accordion-collapsed" slot="content">
