--- a/App/src/global.scss
+++ b/App/src/global.scss
@@ -90,3 +90,35 @@ ion-toast.custom-success {
  
 }
 
+.head{
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.input-class {
+  --border-color: #d7d8da;
+  --border-radius: 0.6em;
+  --border-width: 1px;
+  border: var(--border-width) solid var(--border-color);
+  border-radius: var(--border-radius);
+  box-shadow: 0 0 10px #dee2e6;
+}
+
+.input-class:focus-within {
+  --border-color: #555;
+}
+
+
+
+
+
+
+
+
+.ion-valid.sc-ion-input-md-h {
+  --highlight-color: var(--ion-color-dark);
+}
+
+.ion-valid {
+  --highlight-color: var(--ion-color-dark);
+}
