--- a/App/src/app/layout/pages/admin/history/history/history.page.html
+++ b/App/src/app/layout/pages/admin/history/history/history.page.html
@@ -25,16 +25,17 @@
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Age</ion-label>
-                    <ion-label>: {{data?.age}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
                     <ion-label class="head">Gender</ion-label>
                     <ion-label>: {{data?.gender}}</ion-label>
                   </ion-col>
                 </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Age</ion-label>
+                    <ion-label>: {{data?.age}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                
                 <ion-row>
                   <ion-col size="12">
                     <ion-label class="head">Blood Group</ion-label>
@@ -59,12 +60,7 @@
                     <ion-label>: {{data?.city}}</ion-label>
                   </ion-col>
                 </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Illness</ion-label>
-                    <ion-label>: {{data?.illness}}</ion-label>
-                  </ion-col>
-                </ion-row>
+               
                 <ion-row *ngIf="data.gender =='FEMALE'">
                   <ion-col size="12">
                     <ion-label class="head">Father/Husband</ion-label>
@@ -96,7 +92,19 @@
                     <ion-label>: {{data?.units}}</ion-label>
                   </ion-col>
                 </ion-row>
-               
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-icon
+                      *ngIf="data?.illness"
+                      name="checkbox"
+                    ></ion-icon>
+                    <ion-icon
+                      *ngIf="!data?.illness"
+                      name="close"
+                    ></ion-icon>
+                    <ion-label class="head donor-illness">Illness</ion-label>
+                  </ion-col>
+                </ion-row>
               </ion-grid>
             </ion-card-content>
           </ion-card>
