--- a/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
+++ b/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
@@ -11,7 +11,7 @@
 <ion-content>
   <!-- <ion-accordion-group value="first" class="ion-padding"> -->
   <ion-accordion-group
-  [value]="!!providedBy ? (providedBy == 'DONOR' ? 'third' : 'second') : 'first'"
+    [value]="!!providedBy ? (providedBy == 'DONOR' ? 'third' : 'second') : 'first'"
   >
     <ion-accordion value="first">
       <ion-item slot="header" color="light">
@@ -352,21 +352,41 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="12">
+                    <ion-col size="6">
+                      <ion-label class="head">Gender</ion-label>
+                      <ion-label>: {{donor?.gender}}</ion-label>
+                    </ion-col>
+                    <ion-col size="6">
                       <ion-label class="head">Age</ion-label>
                       <ion-label>: {{donor?.age}}</ion-label>
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="12">
-                      <ion-label class="head">Gender</ion-label>
-                      <ion-label>: {{donor?.gender}}</ion-label>
+                    <ion-col size="6">
+                      <ion-label class="head">State</ion-label>
+                      <ion-label>: {{donor?.state}}</ion-label>
+                    </ion-col>
+
+                    <ion-col size="6">
+                      <ion-label class="head">City</ion-label>
+                      <ion-label>: {{donor?.city}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="6">
+                      <ion-label class="head">Blood Group</ion-label>
+                      <ion-label>: {{donor?.bloodGroup}}</ion-label>
+                    </ion-col>
+
+                    <ion-col size="6">
+                      <ion-label class="head">Hemoglobin</ion-label>
+                      <ion-label>: {{donor?.hemoglobin}}</ion-label>
                     </ion-col>
                   </ion-row>
                   <ion-row>
                     <ion-col size="12">
-                      <ion-label class="head">Blood Group</ion-label>
-                      <ion-label>: {{donor?.bloodGroup}}</ion-label>
+                      <ion-label class="head">Mobile Number</ion-label>
+                      <ion-label>: {{donor?.mobileNo}}</ion-label>
                     </ion-col>
                   </ion-row>
                   <ion-row>
@@ -375,40 +395,21 @@
                       <ion-label>: {{donor?.donationDate}}</ion-label>
                     </ion-col>
                   </ion-row>
-                  <ion-row>
-                    <ion-col size="12">
-                      <ion-label class="head">State</ion-label>
-                      <ion-label>: {{donor?.state}}</ion-label>
-                    </ion-col>
-                  </ion-row>
-                  <ion-row>
-                    <ion-col size="12">
-                      <ion-label class="head">City</ion-label>
-                      <ion-label>: {{donor?.city}}</ion-label>
-                    </ion-col>
-                  </ion-row>
                   <ion-row *ngIf="donor.gender == 'FEMALE'">
                     <ion-col size="12">
                       <ion-label class="head">Father/Husband</ion-label>
-                      <ion-label>: {{donor.fatherOrHusband}}</ion-label>
+                      <ion-label>: {{donor?.fatherOrHusband}}</ion-label>
                     </ion-col>
                   </ion-row>
+
                   <ion-row>
                     <ion-col size="12">
-                      <ion-label class="head">Hemoglobin</ion-label>
-                      <ion-label>: {{donor?.hemoglobin}}</ion-label>
-                    </ion-col>
-                  </ion-row>
-                  <ion-row>
-                    <ion-col size="12">
-                      <ion-label class="head">Illness</ion-label>
-                      <ion-label>: {{donor?.illness}}</ion-label>
-                    </ion-col>
-                  </ion-row>
-                  <ion-row>
-                    <ion-col size="12">
-                      <ion-label class="head">Mobile Number</ion-label>
-                      <ion-label>: {{donor?.mobileNo}}</ion-label>
+                      <ion-icon
+                        *ngIf="donor?.illness"
+                        name="checkbox"
+                      ></ion-icon>
+                      <ion-icon *ngIf="!donor?.illness" name="close"></ion-icon>
+                      <ion-label class="head donor-illness">Illness</ion-label>
                     </ion-col>
                   </ion-row>
                 </ion-grid>
@@ -432,21 +433,41 @@
                   </ion-col>
                 </ion-row>
                 <ion-row>
-                  <ion-col size="12">
+                  <ion-col size="6">
+                    <ion-label class="head">Gender</ion-label>
+                    <ion-label>: {{donor?.gender}}</ion-label>
+                  </ion-col>
+                  <ion-col size="6">
                     <ion-label class="head">Age</ion-label>
                     <ion-label>: {{donor?.age}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Gender</ion-label>
-                    <ion-label>: {{donor?.gender}}</ion-label>
+                  <ion-col size="6">
+                    <ion-label class="head">State</ion-label>
+                    <ion-label>: {{donor?.state}}</ion-label>
+                  </ion-col>
+
+                  <ion-col size="6">
+                    <ion-label class="head">City</ion-label>
+                    <ion-label>: {{donor?.city}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="6">
+                    <ion-label class="head">Blood Group</ion-label>
+                    <ion-label>: {{donor?.bloodGroup}}</ion-label>
+                  </ion-col>
+
+                  <ion-col size="6">
+                    <ion-label class="head">Hemoglobin</ion-label>
+                    <ion-label>: {{donor?.hemoglobin}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Blood Group</ion-label>
-                    <ion-label>: {{donor?.bloodGroup}}</ion-label>
+                    <ion-label class="head">Mobile Number</ion-label>
+                    <ion-label>: {{donor?.mobileNo}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
@@ -455,40 +476,19 @@
                     <ion-label>: {{donor?.donationDate}}</ion-label>
                   </ion-col>
                 </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">State</ion-label>
-                    <ion-label>: {{donor?.state}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">City</ion-label>
-                    <ion-label>: {{donor?.city}}</ion-label>
-                  </ion-col>
-                </ion-row>
                 <ion-row *ngIf="donor.gender == 'FEMALE'">
                   <ion-col size="12">
                     <ion-label class="head">Father/Husband</ion-label>
                     <ion-label>: {{donor.fatherOrHusband}}</ion-label>
                   </ion-col>
                 </ion-row>
+
+              
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Hemoglobin</ion-label>
-                    <ion-label>: {{donor?.hemoglobin}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Illness</ion-label>
-                    <ion-label>: {{donor?.illness}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Mobile Number</ion-label>
-                    <ion-label>: {{donor?.mobileNo}}</ion-label>
+                    <ion-icon *ngIf="donor?.illness" name="checkbox"></ion-icon>
+                    <ion-icon *ngIf="!donor?.illness" name="close"></ion-icon>
+                    <ion-label class="head donor-illness">Illness</ion-label>
                   </ion-col>
                 </ion-row>
               </ion-grid>
