--- a/App/src/app/layout/pages/change-language/change-language.page.html
+++ b/App/src/app/layout/pages/change-language/change-language.page.html
@@ -10,15 +10,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-radio-group value="strawberries">
+  <ion-radio-group  (ionChange)="change($event.detail.value)">
     <ion-card>
       <ion-card-content>
         <ion-item lines="none">
-          <ion-radio checked value="english"></ion-radio>
+          <ion-radio value="en" checked="currentLanguage === 'en'"></ion-radio>
           <ion-label class="ion-padding-horizontal">English</ion-label>
         </ion-item>
         <ion-item lines="none">
-          <ion-radio value="hindi"></ion-radio>
+          <ion-radio value="hi"  checked="currentLanguage === 'hi'"></ion-radio>
           <ion-label class="ion-padding-horizontal">Hindi</ion-label>
         </ion-item>
        
