--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -329,11 +329,6 @@
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">Illness</ion-label>
-                    <ion-label> : {{data?.illness}}</ion-label>
-                  </ion-col>
-
-                  <ion-col size="12">
                     <ion-label class="head">Mobile No</ion-label>
                     <ion-label> : {{data?.mobileNo}}</ion-label>
                   </ion-col>
@@ -343,7 +338,17 @@
                     <ion-label> : {{data?.donationDate}}</ion-label>
                   </ion-col>
 
-          
+                  <ion-col size="12">
+                    <ion-icon
+                      *ngIf="data?.illness"
+                      name="checkbox"
+                    ></ion-icon>
+                    <ion-icon
+                      *ngIf="!data?.illness"
+                      name="close"
+                    ></ion-icon>
+                    <ion-label class="head donor-illness">Illness</ion-label>
+                  </ion-col>
                 </ion-row>
               </ion-grid>
             </ion-card-content>
