--- a/website/src/app/features/landing-layout/components/footer/footer.component.html
+++ b/website/src/app/features/landing-layout/components/footer/footer.component.html
@@ -7,8 +7,8 @@
           <!-- <h5 class="subhead">Blood Donation Camp</h5> -->
           <!-- <h5 class="subhead">Thalassemia Request</h5> -->
           <!-- <h5 class="subhead">NRCTC Recoganise</h5> -->
-          <h5 class="texthead" routerLink="/terms" (click)="scrollToTop('terms')">Terms & Conditions</h5>
-          <h5 class="texthead" routerLink="/privacy" (click)="scrollToTop('privacy')">Privacy Policy</h5>
+          <h5 class="texthead" routerLink="/terms" (click)="scrollToTop()">Terms & Conditions</h5>
+          <h5 class="texthead" routerLink="/privacy" (click)="scrollToTop()">Privacy Policy</h5>
         </div>
 
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
