--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
@@ -44,3 +44,7 @@ ion-card {
     align-items: center;
   
   }
+  .align-status
+  {margin-top: 17px;
+    display: flex;
+    justify-content: end;}
